refactor(OrderItemManager): 문법 변경
- toList() 문법으로 변경